# FashionConcierge

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml
.github/: README.md
adk_app/: README.md  app.py  config.py  genai_fallback.py  logging_config.py
agents/: README.md  calendar_agent.py  orchestrator.py  outfit_stylist.py  outfit_stylist_agent.py  quality_critic.py  wardrobe_ingestion.py  wardrobe_query.py  weather_agent.py
bs4/: README.md  __init__.py
config/: README.md
deploy/: README.md  cloudrun-service.yaml  vertex-agent-engine.yaml
evaluation/: README.md  harness.py  scenarios.py
logic/: README.md  __init__.py  context_synthesizer.py  contextual_filtering.py  outfit_builder.py  outfit_scoring.py  safety.py  validation.py
memory/: README.md  session_store.py  user_profile.py
models/: README.md  __init__.py  color_theory.py  ingestion_mapping.py  mood_styles.py  outfit.py  taxonomy.py  wardrobe.py  wardrobe_item.py
notebooks/: fashion_concierge_demo.ipynb
server/: README.md  __init__.py  api.py
tests/: README.md  fashion_concierge_manual_testing.ipynb  phase1_manual_testing.ipynb  test_app_skeleton.py  test_evaluation_suite.py  test_ingestion_phase2.py  test_phase3_outfit_styling.py  test_phase4_calendar_weather.py  test_phase5_context_styling.py  test_provider_instantiation.py  test_quality_critic.py  test_rag.py  test_session_store.py  test_wardrobe_query_agent.py  test_wardrobe_storage.py
tools/: README.md  calendar.py  calendar_provider.py  embeddings.py  init_rag_storage.py  memory_tools.py  (+9 more)
(+5 files in other folders)
