[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fashion-concierge"
version = "0.1.0"
description = "Fashion Concierge AI agent using Google ADK and Gemini"
authors = [{name = "Fashion Concierge"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "google-generativeai[agent]>=0.5.0",
  "pydantic>=2.6.0",
  "requests>=2.32.3",
  "beautifulsoup4>=4.12.3",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]
